syntax = "proto3";
package entry_post_grpc;
import "validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service EntryService {
  rpc Create(CreateReq) returns (Entry);
  rpc Delete(DeleteReq) returns (google.protobuf.BoolValue);
  rpc GetListByPostID(ID) returns (stream Entry);
}

message Entry {
  int64 id = 1;
  int64 post_id = 2;
  int64 user_id = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message CreateReq {
  int64 post_id = 1 [(validate.rules).int64.gte = 1];
  int64 user_id= 2 [(validate.rules).int64.gte = 1];
}

message DeleteReq {
  int64 id = 1 [(validate.rules).int64.gte = 1];
  int64 user_id = 2 [(validate.rules).int64.gte = 1];
}

message ID {
  int64 post_id = 1 [(validate.rules).int64.gte = 1];
}